add team elo to ranking responses